--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: rgb(185, 207, 247);
+    background-color: rgb(208 201 198);
+    background-color: rgb(251 229 185);
 }
 
 
@@ -104,7 +105,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    border-radius: 5%;
+    /* border-radius: 5%; */
     color: cornsilk;
 }
 
@@ -120,8 +121,9 @@ body{
 .intro{
     font-size: 2rem;
     line-height: 3rem;
-    padding-left: 1rem;
-    width: 30%;
+    padding-left: 2rem;
+    padding-bottom: 2rem;
+    width: 45%;
 }
 
 
@@ -208,7 +210,7 @@ body{
     background-size: cover;
     background-position: center;
    padding-bottom: 2rem;
-    border-radius: 7%;
+    /* border-radius: 7%; */
 }
 .disease{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -244,14 +246,20 @@ h5{
 .col{
     
     opacity: 0.9;
-    background-image: radial-gradient(closest-side at 50% 50%, rgb(41 191 225), #31b1c2,rgb(50 68 108));
+    /* background-image: radial-gradient(closest-side at 50% 50%, rgb(41 191 225), #31b1c2,rgb(50 68 108));
+    background-image: radial-gradient(closest-side at 50% 50%, rgb(217 131 8), rgb(203 106 35), rgb(140 39 1)); */
+    background-image: radial-gradient(closest-side at 50% 50%, rgb(220 175 41), rgb(235 182 74), rgb(130 34 0));
     border-radius: 50%;
     padding: 4rem;
+    margin: 1rem;
     transition: background-image .35s ease-in-out;
 }
-
+.col a{
+    text-decoration: none;
+}
 .col:hover{
     background-image: radial-gradient(closest-side at 50% 50%, rgb(85 164 182), #57dff1,rgb(40 55 82));
+    background-image: radial-gradient(closest-side at 50% 50%, rgb(255 220 118), rgb(255 213 126), rgb(255 98 42));
 }
 
 
@@ -273,7 +281,7 @@ h5{
 .container ul li{
     list-style: none;
     display: inline;
-    margin: 2rem;
+    margin: 0.2rem;
 }
 
 .container ul li a{
@@ -302,3 +310,6 @@ h5{
     text-decoration: none;
     color: cornsilk;
 }
+
+
+
